# scroll-shooter

./: .gitignore  CMakeLists.txt  README.md  scroll-shooter.sln
scroll-shooter/: AllyShip.cpp  AllyShip.h  Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  EnemyShip.cpp  EnemyShip.h  MakeFile.txt  config.h  main.cpp  scroll-shooter.vcxproj  scroll-shooter.vcxproj.filters
